<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@color/white">
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/white"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="42dp"
		android:layout_marginBottom="17dp">
		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="24dp">
			<TextView
				android:id="@+id/signup_msg_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/signup_msg"
				android:textSize="20sp"
				android:textColor="@color/main_color2"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false" />
			<ImageButton
				android:id="@+id/signup_cancel_button"
				android:layout_width="20dp"
				android:layout_height="20dp"
				android:src="@drawable/signup_back"
				android:scaleType="fitXY"
				android:background="@color/button_transparent"
				android:padding="2dp"
				app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="5dp"
				app:layout_constraintRight_toRightOf="parent"
				android:layout_marginRight="5dp"/>
			
			<TextView
				android:id="@+id/signup_name_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/signup_name"
				android:textSize="12sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				app:layout_constraintTop_toBottomOf="@id/signup_msg_text"
				android:layout_marginTop="50dp"/>
			<EditText
				android:id="@+id/signup_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/signup_name_hint"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:inputType="text"
				app:layout_constraintTop_toBottomOf="@id/signup_name_text"/>
			<TextView
				android:id="@+id/signup_name_warning"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/signup_name_warning"
				android:textSize="12sp"
				android:textColor="@color/warning"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				app:layout_constraintTop_toBottomOf="@id/signup_name"
				android:visibility="invisible"/>
			<ImageView
				android:id="@+id/signup_name_warn_image"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/signup_warning"
				app:layout_constraintTop_toBottomOf="@+id/signup_name"
				app:layout_constraintRight_toRightOf="parent"
				android:visibility="invisible"/>
			
			<TextView
				android:id="@+id/signup_email_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/signup_email"
				android:textSize="12sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				app:layout_constraintTop_toBottomOf="@id/signup_name_text"
				android:layout_marginTop="70dp" />
			<EditText
				android:id="@+id/signup_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/signup_email_hint"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:inputType="text"
				app:layout_constraintTop_toBottomOf="@id/signup_email_text"/>
			<TextView
				android:id="@+id/signup_email_warning"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/signup_email_warning"
				android:textSize="12sp"
				android:textColor="@color/warning"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				app:layout_constraintTop_toBottomOf="@id/signup_email"
				android:visibility="invisible"/>
			<ImageView
				android:id="@+id/signup_email_warn_image"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/signup_warning"
				app:layout_constraintTop_toBottomOf="@+id/signup_email"
				app:layout_constraintRight_toRightOf="parent"
				android:visibility="invisible"/>
			
			<TextView
				android:id="@+id/signup_password_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/signup_password"
				android:textSize="12sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				app:layout_constraintTop_toBottomOf="@id/signup_email_text"
				android:layout_marginTop="70dp" />
			<EditText
				android:id="@+id/signup_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/signup_password_hint"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:inputType="textPassword"
				app:layout_constraintTop_toBottomOf="@id/signup_password_text"/>
			<TextView
				android:id="@+id/signup_password_warning"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/signup_password_warning"
				android:textSize="12sp"
				android:textColor="@color/warning"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				app:layout_constraintTop_toBottomOf="@id/signup_password"
				android:visibility="invisible"/>
			<ImageView
				android:id="@+id/signup_password_warn_image"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/signup_warning"
				app:layout_constraintTop_toBottomOf="@+id/signup_password"
				app:layout_constraintRight_toRightOf="parent"
				android:visibility="invisible"/>
			
			<TextView
				android:id="@+id/signup_passwordConfirm_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/signup_passwordConfirm"
				android:textSize="12sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				app:layout_constraintTop_toBottomOf="@id/signup_password_text"
				android:layout_marginTop="70dp" />
			<EditText
				android:id="@+id/signup_passwordConfirm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/signup_passwordConfirm_hint"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:inputType="textPassword"
				app:layout_constraintTop_toBottomOf="@id/signup_passwordConfirm_text"/>
			<TextView
				android:id="@+id/signup_passwordConfirm_warning"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/signup_passwordConfirm_warning"
				android:textSize="12sp"
				android:textColor="@color/warning"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				app:layout_constraintTop_toBottomOf="@id/signup_passwordConfirm"
				android:visibility="invisible"/>
			<ImageView
				android:id="@+id/signup_passwordConfirm_warn_image"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:src="@drawable/signup_warning"
				app:layout_constraintTop_toBottomOf="@+id/signup_passwordConfirm"
				app:layout_constraintRight_toRightOf="parent"
				android:visibility="invisible"/>
			<ImageButton
				android:id="@+id/signup_button"
				android:layout_width="match_parent"
				android:layout_height="0dp"
				android:src="@drawable/signup_button"
				android:scaleType="fitXY"
				android:adjustViewBounds="true"
				android:background="@color/button_transparent"
				app:layout_constraintBottom_toBottomOf="parent"/>
		</android.support.constraint.ConstraintLayout>
	</android.support.constraint.ConstraintLayout>
	
</android.support.constraint.ConstraintLayout>