<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<ImageView
		android:id="@+id/login_background"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:src="@drawable/login_background"
		android:scaleType="fitXY" />
	
	<ImageView
		android:id="@+id/login_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/login_logo"
		android:layout_marginTop="25dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintVertical_bias="0.18"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintLeft_toLeftOf="parent" />

	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="36dp"
		app:layout_constraintTop_toBottomOf="@id/login_logo"
		app:layout_constraintBottom_toTopOf="@id/login_button"
		app:layout_constraintVertical_bias="0.32">
		
		<TextView
			android:id="@+id/email_login_id_text"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/email_login_id"
			android:textSize="12sp"
			android:textColor="@color/white"
			android:fontFamily="@font/notosans_bold"
			android:includeFontPadding="false"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"/>
		
		<EditText
			android:id="@+id/email_login_id"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:hint="@string/email_login_id_hint"
			android:textColorHint="@color/email_login_hint"
			android:textSize="12sp"
			android:textColor="@color/white"
			android:backgroundTint="@color/white"
			android:fontFamily="@font/notosans_regular"
			android:includeFontPadding="false"
			android:inputType="text"
			app:layout_constraintLeft_toRightOf="@id/email_login_id_text"
			app:layout_constraintRight_toRightOf="parent"/>
	</android.support.constraint.ConstraintLayout>
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="36dp"
		app:layout_constraintTop_toBottomOf="@id/login_logo"
		app:layout_constraintBottom_toTopOf="@id/login_button"
		app:layout_constraintVertical_bias="0.66">
		
		<TextView
			android:id="@+id/email_login_password_text"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:text="@string/email_login_password"
			android:textSize="12sp"
			android:textColor="@color/white"
			android:fontFamily="@font/notosans_bold"
			android:includeFontPadding="false"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"/>
		
		<EditText
			android:id="@+id/email_login_password"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:hint="@string/email_login_password_hint"
			android:textColorHint="@color/email_login_hint"
			android:textSize="12sp"
			android:textColor="@color/white"
			android:backgroundTint="@color/white"
			android:fontFamily="@font/notosans_regular"
			android:includeFontPadding="false"
			android:inputType="textPassword"
			app:layout_constraintLeft_toRightOf="@id/email_login_password_text"
			app:layout_constraintRight_toRightOf="parent"/>
	</android.support.constraint.ConstraintLayout>

	<ImageButton
		android:id="@+id/login_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/email_login_button"
		android:background="@color/button_transparent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintVertical_bias="0.68"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"/>
	
	<android.support.constraint.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintTop_toBottomOf="@id/login_button"
		android:layout_marginTop="16dp"
		android:layout_marginLeft="36dp"
		android:layout_marginRight="40dp">
		<android.support.constraint.ConstraintLayout
			android:id="@+id/saveId"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@id/autoLogin"
			app:layout_constraintHorizontal_chainStyle="spread">
			<CheckBox
				android:id="@+id/saveId_checkBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:buttonTint="@color/white"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/email_login_saveId"
				android:textSize="14sp"
				android:textColor="@color/white"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toRightOf="@id/saveId_checkBox"
				android:layout_marginLeft="4dp"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
			android:id="@+id/autoLogin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toRightOf="@id/saveId"
			app:layout_constraintRight_toRightOf="parent">
			<CheckBox
				android:id="@+id/autoLogin_checkBox"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:buttonTint="@color/white"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/email_login_autoLogin"
				android:textSize="14sp"
				android:textColor="@color/white"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintLeft_toRightOf="@id/autoLogin_checkBox"
				android:layout_marginLeft="4dp"/>
		</android.support.constraint.ConstraintLayout>
	</android.support.constraint.ConstraintLayout>
	
	<TextView
		android:id="@+id/signup_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/email_login_signup"
		android:textSize="12sp"
		android:textColor="@color/white"
		android:fontFamily="@font/notosans_bold"
		android:includeFontPadding="false"
		android:textAlignment="center"
		android:padding="5dp"
		android:layout_marginTop="25dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintVertical_bias="0.88"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"/>
	
</android.support.constraint.ConstraintLayout>