<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_marginTop="55dp"
	android:layout_marginBottom="30dp">
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/above_texts"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="36dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/categories"
		app:layout_constraintVertical_chainStyle="spread">
		<TextView
			android:id="@+id/category"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/category"
			android:textSize="20sp"
			android:textColor="@color/main_color2"
			android:fontFamily="@font/notosans_regular"
			android:includeFontPadding="false" />
		<TextView
			android:id="@+id/category_explain"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/category_explain"
			android:textSize="14sp"
			android:textColor="#333333"
			app:layout_constraintTop_toBottomOf="@id/category"
			android:layout_marginTop="4dp"
			android:fontFamily="@font/notosans_regular"
			android:includeFontPadding="false" />
	</android.support.constraint.ConstraintLayout>
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/categories"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="36dp"
		app:layout_constraintTop_toBottomOf="@id/above_texts"
		android:layout_marginTop="12dp"
		app:layout_constraintBottom_toTopOf="@id/below_btns"
		android:layout_marginBottom="12dp">
		
		<android.support.constraint.ConstraintLayout
			android:id="@+id/category_1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/slot_1"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/category_1"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.12"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/rating_bar_1"/>
			<com.hsalf.smilerating.SmileRating
				android:id="@+id/rating_bar_1"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="2"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/slot_1"
				app:layout_constraintRight_toRightOf="parent"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
			android:id="@+id/category_2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/category_1">
			<TextView
				android:id="@+id/slot_2"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/category_2"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.12"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/rating_bar_2"/>
			<com.hsalf.smilerating.SmileRating
				android:id="@+id/rating_bar_2"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="2"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/slot_2"
				app:layout_constraintRight_toRightOf="parent"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
			android:id="@+id/category_3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/category_2">
			<TextView
				android:id="@+id/slot_3"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/category_3"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.12"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/rating_bar_3"/>
			<com.hsalf.smilerating.SmileRating
				android:id="@+id/rating_bar_3"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="2"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/slot_3"
				app:layout_constraintRight_toRightOf="parent"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
			android:id="@+id/category_4"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/category_3">
			<TextView
				android:id="@+id/slot_4"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/category_4"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.12"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/rating_bar_4"/>
			<com.hsalf.smilerating.SmileRating
				android:id="@+id/rating_bar_4"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="2"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/slot_4"
				app:layout_constraintRight_toRightOf="parent"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
			android:id="@+id/category_5"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/category_4">
			<TextView
				android:id="@+id/slot_5"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/category_5"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.12"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/rating_bar_5"/>
			<com.hsalf.smilerating.SmileRating
				android:id="@+id/rating_bar_5"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="2"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/slot_5"
				app:layout_constraintRight_toRightOf="parent"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
			android:id="@+id/category_6"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/category_5">
			<TextView
				android:id="@+id/slot_6"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/category_6"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.12"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/rating_bar_6"/>
			<com.hsalf.smilerating.SmileRating
				android:id="@+id/rating_bar_6"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="2"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/slot_6"
				app:layout_constraintRight_toRightOf="parent"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
			android:id="@+id/category_7"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/category_6">
			<TextView
				android:id="@+id/slot_7"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/category_7"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.12"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/rating_bar_7"/>
			<com.hsalf.smilerating.SmileRating
				android:id="@+id/rating_bar_7"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="2"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/slot_7"
				app:layout_constraintRight_toRightOf="parent"/>
		</android.support.constraint.ConstraintLayout>
		<android.support.constraint.ConstraintLayout
			android:id="@+id/category_8"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintTop_toBottomOf="@id/category_7">
			<TextView
				android:id="@+id/slot_8"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="1"
				android:layout_height="wrap_content"
				android:text="@string/category_8"
				android:textSize="14sp"
				android:fontFamily="@font/notosans_regular"
				android:includeFontPadding="false"
				android:textAlignment="center"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintVertical_bias="0.12"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toLeftOf="@id/rating_bar_8"/>
			<com.hsalf.smilerating.SmileRating
				android:id="@+id/rating_bar_8"
				android:layout_width="0dp"
				app:layout_constraintHorizontal_weight="2"
				android:layout_height="wrap_content"
				app:layout_constraintLeft_toRightOf="@id/slot_8"
				app:layout_constraintRight_toRightOf="parent"/>
		</android.support.constraint.ConstraintLayout>
		
	</android.support.constraint.ConstraintLayout>
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/below_btns"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="36dp"
		app:layout_constraintTop_toBottomOf="@id/categories"
		app:layout_constraintBottom_toBottomOf="parent">
		<ImageButton
			android:id="@+id/later_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/category_later"
			android:background="@color/button_transparent"
			app:layout_constraintLeft_toLeftOf="parent"/>
		
		<ImageButton
			android:id="@+id/ok_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/category_ok_disable"
			android:background="@color/button_transparent"
			app:layout_constraintRight_toRightOf="parent"/>
	</android.support.constraint.ConstraintLayout>
	
</android.support.constraint.ConstraintLayout>